Fix WCAG text contrast failures in light mode (#63)
* Initial plan

* Fix WCAG text accessibility for light/dark mode toggle


* Refactor: move component light-mode overrides to each component's SCSS via :host-context


---------

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,4 +42,12 @@
   color: #F9D07A;
 }
 
+:host-context(.light-mode) {
+  .user-menu-button {
+    color: #010014;
+  }
 
+  .theme-toggle-button {
+    color: #010014;
+  }
+}
