--- a/src/app/views/email/reset-password/reset-password.component.scss
+++ b/src/app/views/email/reset-password/reset-password.component.scss
@@ -51,3 +51,18 @@
     }
   }
 }
+
+:host-context(.light-mode) {
+  .reset-password-form {
+    background-color: rgba(249, 208, 122, 0.08);
+    border-color: rgba(92, 64, 0, 0.15);
+
+    .reset-password-title {
+      color: rgba(1, 0, 20, 0.85);
+    }
+
+    .password-unmatch-error {
+      color: #B00020;
+    }
+  }
+}
